tests/expectations/compiler/function/scope_fail.out
Error [ETYC0372005]: Unknown variable `myGlobal`
    --> compiler-test:2:12
     |
   2 |     return myGlobal;
     |            ^^^^^^^^
